// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns all items with matching Id 1`] = `
[
  {
    "Id": 1,
    "ItemName": "Socks",
    "Stock": 10,
  },
]
`;

exports[`it returns all items with matching Item name 1`] = `
[
  {
    "Id": 1,
    "ItemName": "Socks",
    "Stock": 10,
  },
  {
    "Id": 3,
    "ItemName": "Socks",
    "Stock": 100,
  },
]
`;
